# Toolscore

./: .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TUTORIAL.md  action.yml  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SEMANTIC_RELEASE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  debug-token.yml  release.yml  site.yml  toolscore-example.yml
docs/: changelog.rst  comparison.rst  conf.py  contributing.rst  extending.rst  fluent_api.rst  frameworks.rst  index.rst  installation.rst  llm_judge.rst  matchers.rst  mcp_testing.rst  quickstart.rst  snapshot_testing.rst  user_guide.rst
docs/api/: adapters.rst  core.rst  index.rst  matchers.rst  mcp.rst  metrics.rst  reports.rst  snapshots.rst  validators.rst  verdict.rst
examples/: README.md  capture_anthropic_trace.py  capture_openai_trace.py  evaluate_in_memory.py  gold_calls.json  langgraph_quickstart.py  mcp_scorecard_demo.py  openai_functions_example.json  pydantic_ai_quickstart.py  requirements.txt  test_example_with_pytest.py  trace_anthropic.json  trace_custom.json  trace_openai.json
examples/datasets/: README.md  code_assistant.json  ecommerce_agent.json  rag_agent.json
examples/github_actions/: README.md  toolscore-evaluation.yml  toolscore-quality-gates.yml  toolscore-regression.yml
examples/notebooks/: 01_quickstart.ipynb  02_custom_formats.ipynb  03_advanced_metrics.ipynb  README.md
examples/traces_with_errors/: missing_tool.json  semantic_equiv.json  wrong_args.json  wrong_tool.json
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/src/components/: AudienceSplit.astro  Button.astro  CTASection.astro  CodeBlock.astro  ComparisonMatrix.astro  FeatureCard.astro  Footer.astro  GradeBadge.astro  Hero.astro  InstallCommand.astro  Nav.astro  PageHeader.astro  ScorecardDemo.astro  StepFlow.astro
site/src/data/: site.ts
site/src/layouts/: BaseLayout.astro
site/src/pages/: agents.astro  compare.astro  index.astro  mcp.astro  quickstart.astro
site/src/styles/: global.css
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  fake_mcp_server.py
tests/manual/: test_llm_judge_manual.py
tests/unit/: test_adapters.py  test_baseline.py  test_capture.py  test_cases.py  test_cli.py  test_comparison.py  test_core.py  test_diff.py  test_evaluate.py  test_expect.py  test_explainer.py  test_generators.py  test_integrations.py  test_llm_judge.py  test_matchers.py  test_mcp_adapter.py  test_mcp_client.py  test_mcp_harness.py  test_metrics.py  test_pytest_plugin.py  test_reports.py  test_scaffold.py  test_snapshots.py  test_trajectory.py  test_validators.py  test_verdict.py
toolscore/: __init__.py  baseline.py  capture.py  cli.py  comparison.py  core.py  debug.py  diff.py  expect.py  explainer.py  integrations.py  matchers.py  pytest_plugin.py  scaffold.py  snapshots.py  verdict.py
toolscore/adapters/: __init__.py  anthropic.py  base.py  custom.py  gemini.py  langchain.py  mcp.py  openai.py
toolscore/generators/: __init__.py  synthetic.py
toolscore/mcp/: __init__.py  client.py  config.py  harness.py  sample_server.py  scorecard.py
toolscore/metrics/: __init__.py  accuracy.py  arguments.py  cost.py  cost_estimator.py  efficiency.py  llm_judge.py  sequence.py  side_effects.py  tool_correctness.py  trajectory.py
toolscore/reports/: __init__.py  console_report.py  csv_report.py  html_report.py  json_report.py  markdown_report.py
toolscore/templates/datasets/: multi_tool_agent.json  weather_agent.json
toolscore/templates/init/: test_agent_tools.py.j2  toolscore-ci.yml.j2
toolscore/validators/: __init__.py  database.py  filesystem.py  http.py  schema.py
